@@ -1,3 +1,8 @@
+2006-12-28  Brandon Hale  <brandon@ubuntu.com>
+	
+	* src/TagDialog.cs, src/PlayerWindow.cs, src/FindStation.cs:
+	Apply patch from Łukasz Jernaś to fix remaining l10n issues.
+
 2006-12-23  Brandon Hale  <brandon@ubuntu.com>
 	
 	* src/InfoWindow.cs, src/TagDialog.cs, src/FirstRunDialog.cs:
